Fix large-heap file mapping.